# memtrack

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
src/: CMakeLists.txt  memtrack.h  test.h
src/memtrack/: memtrack.cpp  memtrack.h
